--- a/kingdom.html
+++ b/kingdom.html
@@ -100,7 +100,9 @@
 
 <div class="village_click2" onclick="go_village()"></div>
 
-<div class="village_click" onclick="go_village()"></div>
+<div class="village_click" onclick="go_village()">
+<div id="village_timer" class="build_up_timer" style="width: 100%; text-align: center; margin-top: 6vh; background-color: black; color: white; display: none;"></b><b id="village_up_d">00</b>:<b id="village_up_h">00</b>:<b id="village_up_m">00</b>:<b id="village_up_s">00</b></b></div>
+</div>
 
 <div class="footer">
 
