--- a/military.html
+++ b/military.html
@@ -49,8 +49,8 @@
 
 <div class="mn_div">
 <div class="mn_divs_head"><b id="kingdom_center_text" style="color: blue; cursor: pointer;"></b></div>
-<div class="mn_div_in"><div class="mn_div_in_text"><b>0</b><b id="army_unit_text"></b></div><div class="mn_div_in_img" style="background-image: url('images/next_icon.png');"></div></div>
-<div class="mn_div_in"><div class="mn_div_in_text"><b>0</b><b id="spy_text"></b></div><div class="mn_div_in_img" style="background-image: url('images/next_icon.png');"></div></div>
+<div class="mn_div_in"><div class="mn_div_in_text"><b id="center_total_troops"></b><b id="army_unit_text"></b></div><div class="mn_div_in_img" style="background-image: url('images/next_icon.png');"></div></div>
+<div class="mn_div_in"><div class="mn_div_in_text"><b id="center_total_spy"></b><b id="spy_text"></b></div><div class="mn_div_in_img" style="background-image: url('images/next_icon.png');"></div></div>
 </div>
 
 <div id="content_1" class="contents">
