--- a/village.html
+++ b/village.html
@@ -225,6 +225,87 @@
 
 </div>
 
+<div class="build_div" style="border: none; background-color: transparent;">
+
+<div class="build_div_head_text"><b id="25_fp" style="color: #D2042D;"></b></div>
+<div class="build_left_img"><div class="build_img" style="background-image: url('images/farmer_upgrade_icon.png'); cursor: none"></div></div>
+<div id="build_boostr1" class="build_right">
+
+<div class="boost_text" style="font-size: 2vh;">
+<textarea id="25_fpt" style="height: 100%; border: none; resize: none; outline: none; background-color: transparent; pointer-events: none;"></textarea>
+</div>
+
+<div class="build_button_text" style="margin-right: 2%; height: 9vh; margin-top: 1vh;">
+<div class="build_button" style="background-image: url('images/button_lime.png'); margin: 0px; width: 100%; line-height: 7vh;" onclick="farmer_boost()"><b id="b3">^</b></div>
+<div class="build_button_text_bottom"><img src="images/diamond_icon.png" style="width: 15px; height: 15px;"><b>100</b></div>
+</div>
+	
+</div>
+
+<div id="build_boost1" class="build_right" style="display: none;">
+
+<div id="build_boost_board1">
+<div class="build_up_timer" style="margin-top: 1vh;"><b id="farmer_boost_d">00</b>:<b id="farmer_boost_h">00</b>:<b id="farmer_boost_m">00</b>:<b id="farmer_boost_s">00</b></b></div>
+
+</div>
+</div>
+
+</div>
+
+<div class="build_div" style="border: none; background-color: transparent;">
+
+<div class="build_div_head_text"><b id="25_wp" style="color: #D2042D;"></b></div>
+<div class="build_left_img"><div class="build_img" style="background-image: url('images/woodcutter_upgrade_icon.png'); cursor: none"></div></div>
+<div id="build_boostr2" class="build_right">
+
+<div class="boost_text" style="font-size: 2vh;">
+<textarea id="25_wpt" style="height: 100%; border: none; resize: none; outline: none; background-color: transparent; pointer-events: none;"></textarea>
+</div>
+
+<div class="build_button_text" style="margin-right: 2%; height: 9vh; margin-top: 1vh;">
+<div class="build_button" style="background-image: url('images/button_lime.png'); margin: 0px; width: 100%; line-height: 7vh;" onclick="woodcutter_boost()"><b id="b3">^</b></div>
+<div class="build_button_text_bottom"><img src="images/diamond_icon.png" style="width: 15px; height: 15px;"><b>100</b></div>
+</div>
+	
+</div>
+
+<div id="build_boost2" class="build_right" style="display: none;">
+
+<div id="build_boost_board2">
+<div class="build_up_timer" style="margin-top: 1vh;"><b id="woodcutter_boost_d">00</b>:<b id="woodcutter_boost_h">00</b>:<b id="woodcutter_boost_m">00</b>:<b id="woodcutter_boost_s">00</b></b></div>
+
+</div>
+</div>
+
+</div>
+
+<div class="build_div" style="border: none; background-color: transparent;">
+
+<div class="build_div_head_text"><b id="25_gp" style="color: #D2042D;"></b></div>
+<div class="build_left_img"><div class="build_img" style="background-image: url('images/gold_miner_upgrade_icon.png'); cursor: none"></div></div>
+<div id="build_boostr3" class="build_right">
+
+<div class="boost_text" style="font-size: 2vh;">
+<textarea id="25_gpt" style="height: 100%; border: none; resize: none; outline: none; background-color: transparent; pointer-events: none;"></textarea>
+</div>
+
+<div class="build_button_text" style="margin-right: 2%; height: 9vh; margin-top: 1vh;">
+<div class="build_button" style="background-image: url('images/button_lime.png'); margin: 0px; width: 100%; line-height: 7vh;" onclick="gold_miner_boost()"><b id="b3">^</b></div>
+<div class="build_button_text_bottom"><img src="images/diamond_icon.png" style="width: 15px; height: 15px;"><b>100</b></div>
+</div>
+	
+</div>
+
+<div id="build_boost3" class="build_right" style="display: none;">
+
+<div id="build_boost_board3">
+<div class="build_up_timer" style="margin-top: 1vh;"><b id="gold_miner_boost_d">00</b>:<b id="gold_miner_boost_h">00</b>:<b id="gold_miner_boost_m">00</b>:<b id="gold_miner_boost_s">00</b></b></div>
+
+</div>
+</div>
+
+</div>
+
 </div>
 
 </body>
