--- a/village.html
+++ b/village.html
@@ -306,6 +306,31 @@
 
 </div>
 
+<div class="mn_div_line" style="background-image: url('images/line.png'); margin-top: 4vh;"></div>
+<div class="village_kick_title"><b id="villager_kick_text"></b></div>
+
+<div class="villager_kick_board">
+
+<div class="villager_kick_left">
+
+<div class="radio_div"><input id="farmer_kick" class="village_kick_input_radio" type="radio" name="gender" value="farmer"><label id="farmer_kick_text" for="farmer_kick" style="float: left;"></label></div>
+<div class="radio_div"><input id="woodcutter_kick" class="village_kick_input_radio" type="radio" name="gender" value="woodcutter"><label id="woodcutter_kick_text" for="woodcutter_kick" style="float: left;"></label></div>
+<div class="radio_div"><input id="miner_kick" class="village_kick_input_radio" type="radio" name="gender" value="miner"><label id="miner_kick_text" for="miner_kick" style="float: left;"></label></div>
+
+</div>
+
+<div class="villager_kick_right">
+
+
+<div class="build_button_text" style="margin-right: 2%; margin: auto; height: 13vh; width: 65.609%;">
+<input id="villager_kick_input" class="kick_input" type="number" oninput="inputonlynumber(this)">
+<div class="build_button" style="background-image: url('images/button_red.png'); margin: 0px; width: 100%; line-height: 6vh;" onclick="villager_kick()"><b id="b3">x</b></div>
+</div>
+
+</div>
+
+</div>
+
 </div>
 
 </body>
