--- a/map.html
+++ b/map.html
@@ -76,6 +76,18 @@ background-image: url('images/map_castle.png') !important;
 .m_castle .map_bottom{
 background-color: rgba(0,0,0,0.5);
 }
+
+.m_colony{
+background-image: url('images/map_0.jpg') !important;
+}
+
+.m_colony .map_img{
+background-image: url('images/map_colony.png') !important;
+}
+
+.m_colony .map_bottom{
+background-color: rgba(0,0,0,0.5);
+}
 </style>
 
 <div id="ldd" style="position: absolute;">
