--- a/kingdom.html
+++ b/kingdom.html
@@ -33,7 +33,7 @@
 <div id="set_board_scroll1" class="set_board_scroll">
 <div class="set_board_div2"><b id="king_name_text">King Name</b></div>
 <div id="king_n_text"></div>
-<div id="king_name_set" class="king_name_set"><input id="king_name_input" class="king_name_input" type="text" value="Player" pattern="[a-zA-Z0-9_]" maxlength="12"><div class="king_name_button" style="background-image: url('images/button_lime.png');" onclick="set_king_name()"><b id="save_text">Save</b></div></div>
+<div id="king_name_set" class="king_name_set"><input id="king_name_input" class="king_name_input" type="text" pattern="[a-zA-Z0-9_]" maxlength="12"><div class="king_name_button" style="background-image: url('images/button_lime.png');" onclick="set_king_name()"><b id="save_text">Save</b></div></div>
 <div id="king_name_bottom" class="king_name_bottom"><b id="king_name_bottom_text">King Names maximum of 12 characters</b></div>
 <div class="mn_div_line" style="background-image: url('images/line.png');"></div>
 <div class="set_board_div2"><b id="language_text">Language</b></div>
